...
            android:text="Payment:"
            android:textAlignment="center"
            android:textSize="40dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="Sign In"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="#5565350f"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="Register"
            android:textSize="20dp"
            android:backgroundTint="#5565350f"
            android:textColor="@color/white"/>
...
