<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CheckoutActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="341dp"
        android:layout_height="170dp"
        android:background="#99F8F8F6"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971">

        <TextView
            android:id="@+id/SubTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SubTotal"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delivery Fee"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Tax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tax"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/toPaymentButton"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:background="@drawable/searchview_rounded_background"
            android:text="Continue"
            android:textSize="12dp" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:checkedButton="@id/deliveryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickupButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delivery"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="33dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deliveryButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pickup"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="33dp" />


    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleGroup" />


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Summary"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>