<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HomeFragment">

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:background="@drawable/searchview_rounded_background"
            android:iconifiedByDefault="false"
            android:layoutDirection="ltr"
            android:layout_marginRight="16dp"
            android:queryHint="Search for restaurants.."
            android:textAlignment="viewEnd"
            app:iconifiedByDefault="false" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ViewCartHomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginStart="@dimen/cardview_default_radius"
            android:layout_marginTop="@dimen/cardview_default_radius"
            android:layout_marginEnd="@dimen/cardview_default_radius"
            android:layout_marginBottom="@dimen/cardview_default_radius"
            android:src="@drawable/cart"
            app:fabSize="normal"
            app:maxImageSize="35dp" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchLayout" />

</RelativeLayout>