...
            android:text="BUY MEMBERSHIP"
            android:textColor="#363C45"
            android:textSize="20dp" />


        <Button
            android:id="@+id/logoutButton"
            android:layout_width="265dp"
            android:layout_height="124dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="Logout"
...
