<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg1"
    tools:context=".presentation.RegisterActivity">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#99F8F8F6"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="Register:"
            android:textAlignment="center"
            android:textSize="40dp" />

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="First Name"
            android:inputType="textPersonName"
            android:maxLength="15" />

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName"
            android:maxLength="15" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName"
            android:maxLength="20" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLength="15" />

        <EditText
            android:id="@+id/rePasswordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Re-Password"
            android:inputType="textPassword"
            android:maxLength="15" />

        <Button
            android:id="@+id/registerButton1"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#5565350f"
            android:text="Register" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#5565350f"
            android:text="Back" />

    </LinearLayout>

</FrameLayout>